--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,15 @@
         button{
             color: black;
         }
+        textarea{
+            color: black;
+        }
+        option{
+            color: black;
+        }
+        select{
+            color:black;
+        }
     </style>
 </head>
 
